src-ken&y/objects/Allowance_Rule__c.object
<CustomObject>
    <customHelpPage>HelpAllowanceRule</customHelpPage>
    <fields>
        <fullName>Accrue_To__c</fullName>
        <label>Accrue To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sales_Order_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End Customers</fullName>
                </value>
                <value>
                    <fullName>Customers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allowance_Rule_Unique_Key__c</fullName>
        <description>Used in trigger for figuring out overlapping records.</description>
        <label>Allowance Rules Unique Key</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowance_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allowance Type</label>
        <referenceTo>Allowance_Type__c</referenceTo>
        <relationshipLabel>Allowance Rules</relationshipLabel>
        <relationshipName>Allowance_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficiary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Allowance Rules (Customer)</relationshipLabel>
        <relationshipName>Allowance_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowance_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Allowance Code</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Allowance Rules (Customer)</relationshipLabel>
        <relationshipName>Allowance_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group</label>
        <referenceTo>Customer_Group__c</referenceTo>
        <relationshipLabel>Allowance Rules</relationshipLabel>
        <relationshipName>Allowance_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Hierarchy</description>
        <inlineHelpText>Sales Hierarchy</inlineHelpText>
        <label>DEPRECATED</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Type__c</field>
                <operation>equals</operation>
                <value>Sales Hierarchy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Allowance Rules</relationshipLabel>
        <relationshipName>Allowance_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Allowance Rules (End Customer)</relationshipLabel>
        <relationshipName>Allowance_Rules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>TODAY() +365</defaultValue>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricebook</label>
        <referenceTo>Pricebook__c</referenceTo>
        <relationshipLabel>Allowance Rules</relationshipLabel>
        <relationshipName>Allowance_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipName>Allowances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hierarchy__c.Type__c</field>
                <operation>equals</operation>
                <value>Product Hierarchy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Allowance Rules (Product Hierarchy)</relationshipLabel>
        <relationshipName>Allowance_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Allowances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Type__c</fullName>
        <label>Sales Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Resale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Allowance Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Type__c</columns>
        <columns>Customer2__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Detailed</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Type__c</columns>
        <columns>Sales_Order_Type__c</columns>
        <columns>Customer2__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Hierarchy__c</columns>
        <columns>Accrue_To__c</columns>
        <columns>Beneficiary__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allowance Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allow_only_one_type_of_cust_filtering</fullName>
        <active>true</active>
        <description>Allows only one selection: customer or customer group</description>
        <errorConditionFormula>(Customer2__c != null) &amp;&amp; (Customer_Group__c != null)</errorConditionFormula>
        <errorMessage>Can only have Customer or Customer Group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allow_only_one_type_of_product_filtering</fullName>
        <active>true</active>
        <description>Allows only one selection: product, product group, or product hierarchy.</description>
        <errorConditionFormula>Not(OR( 
AND(Product__c != null,Product_Group__c == null,Product_Hierarchy__c == null),
AND(Product__c == null,Product_Group__c != null,Product_Hierarchy__c == null),
AND(Product__c == null,Product_Group__c == null,Product_Hierarchy__c != null),
AND(Product__c == null,Product_Group__c == null,Product_Hierarchy__c == null)
))</errorConditionFormula>
        <errorMessage>Can only have Product, or Product Group, or Product hierarchy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Beneficiary_Designation_Overlap</fullName>
        <active>true</active>
        <errorConditionFormula>AND(   !ISBLANK(Beneficiary__c), !ISBLANK(TEXT( Accrue_To__c ) ))</errorConditionFormula>
        <errorMessage>Cannot have multiple designation types. Must select either a Beneficiary to a group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_fields_for_Accrual_Allowances</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(Allowance_Type__r.Type__c, &apos;Accrual&apos;), AND(ISBLANK( Beneficiary__c ), ISBLANK( TEXT(Accrue_To__c ))))</errorConditionFormula>
        <errorMessage>Beneficiary or Accrue To All are required for Accrual Type allowances.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resale_So_Type_for_Accruals_only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Sales_Order_Type__c, &apos;Resale&apos;), !ISPICKVAL(Allowance_Type__r.Type__c, &apos;Accrual&apos;))</errorConditionFormula>
        <errorDisplayField>Sales_Order_Type__c</errorDisplayField>
        <errorMessage>Only Accrual Type allowances can be applied to Resale Sales Order Types.</errorMessage>
    </validationRules>
</CustomObject>